@@ -1,5 +1,7 @@
 DATE        AUTHOR      CHANGE
 ----------- ----------- -------------------------------------------------------
+Sep-22-2004 patrickh    Exposed gadget::InputManager.
+                        NEW VERSION: 0.9.3
 Jul-14-2004 patrickh    NEW VERSION: 0.9.2
 Jul-12-2004 patrickh    Exposed vpr::ObjectReader, vpr::ObjectWriter,
                         vpr::ReadableObject, vpr::WriteableObject, and
